fixed the margin left bug on smaller screen

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -128,6 +128,6 @@ p {
   color: white !important;
   max-width: max-content !important;
   padding: 7px 15px;
-  margin-left: -40px;
+  /* margin-left: -40px; */
   border-bottom-left-radius: 10px;
 }
